# syringe

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  syringe.cmake
example/: CMakeLists.txt  CMakePresets.json  main.cpp  syringe.cmake
scripts/: build.sh  install.sh
src/: cli.hpp  main.cpp  syringe.cpp  syringe.hpp  templates.hpp  unicode.hpp  util.hpp  validators.hpp
tests/: main.cpp  util.hpp
